correct logo path, added alt descriptions, fixed formatting

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
         <div class="container">
-            <a href=".." class="navbar-brand"><img src="/assets/images/logo.png" alt=""></a>
+            <a href=".." class="navbar-brand"><img src="assets/images/logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#expand"
                 aria-controls="expand" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -36,13 +36,14 @@
         </div>
     </nav>
 
+    <!-- header -->
     <header class="quote-banner page-about">
         <div class="quote-text">
             <h1>ABOUT US</h1>
         </div>
     </header>
     <section class="container my-5">
-        <!-- Fowler Dispatching Disclaimer -->
+        <!-- fowler dispatching info -->
         <div class="text-center">
             <h2 class="section-title mb-4">FOWLER DISPATCHING</h2>
         </div>
@@ -66,7 +67,7 @@
 
         </div>
 
-        <!-- Project Insights -->
+        <!-- project insights -->
         <div class="container">
             <div class="text-center">
                 <h2 class="section-title text-center mb-4">ABOUT THIS PROJECT</h2>
@@ -90,7 +91,7 @@
                 and to refine the layout and responsiveness of the design.
             </p>
 
-            <!-- Before/After Comparison -->
+            <!-- before/after comparison -->
             <div class="row mt-4">
                 <div class="col-md-6 mb-4">
                     <h5 class="fw-bold">ORIGINAL</h5>
@@ -130,9 +131,7 @@
             </p>
 
         </div>
-
     </section>
-
 
     <!-- footer -->
     <footer class="text-center text-white" style="background-color: #212529ed">
