--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
         <div class="container">
-            <a href=".." class="navbar-brand"><img src="/assets/images/logo.png" alt=""></a>
+            <a href=".." class="navbar-brand"><img src="assets/images/logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#expand"
                 aria-controls="expand" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,6 +37,7 @@
         </div>
     </nav>
 
+    <!-- header -->
     <header class="quote-banner page-contact">
         <div class="quote-text">
             <h1>CONTACT US</h1>
@@ -66,7 +67,7 @@
             <h2 class="section-title mb-5 text">OTHER PROJECTS</h2>
         </div>
 
-        <!-- Projects Thumbnails -->
+        <!-- projects thumbnails -->
         <div class="row g-4 justify-content-center text-center">
             <div class="col-10 col-sm-6 col-md-6 col-lg-3">
                 <a href="https://lolskinsale.com/" target="_blank" class="text-decoration-none">
@@ -110,7 +111,6 @@
             </div>
         </div>
     </section>
-
 
     <!-- footer -->
     <footer class="text-center text-white" style="background-color: #212529ed">
