--- a/apply.html
+++ b/apply.html
@@ -16,124 +16,125 @@
 </head>
 
 <body>
-
-    <body>
-        <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-            <div class="container">
-                <a href=".." class="navbar-brand"><img src="/assets/images/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#expand"
-                    aria-controls="expand" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="expand">
-                    <div class="navbar-nav ms-auto">
-                        <a href="." class="nav-item nav-link ms-3">HOME</a>
-                        <a href="about.html" class="nav-item nav-link ms-3">ABOUT</a>
-                        <a href="quote.html" class="nav-item nav-link ms-3">FREIGHT RATE</a>
-                        <a href="apply.html" class="nav-item nav-link ms-3 text-white">DRIVE FOR US</a>
-                        <a href="contact.html" class="nav-item nav-link ms-3">CONTACT</a>
-                    </div>
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+        <div class="container">
+            <a href=".." class="navbar-brand"><img src="assets/images/logo.png" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#expand"
+                aria-controls="expand" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="expand">
+                <div class="navbar-nav ms-auto">
+                    <a href="." class="nav-item nav-link ms-3">HOME</a>
+                    <a href="about.html" class="nav-item nav-link ms-3">ABOUT</a>
+                    <a href="quote.html" class="nav-item nav-link ms-3">FREIGHT RATE</a>
+                    <a href="apply.html" class="nav-item nav-link ms-3 text-white">DRIVE FOR US</a>
+                    <a href="contact.html" class="nav-item nav-link ms-3">CONTACT</a>
                 </div>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-        <header class="quote-banner page-apply">
-            <div class="quote-text">
-                <h1>CAREER OPPORTUNITIES</h1>
-            </div>
-        </header>
+    <!-- header -->
+    <header class="quote-banner page-apply">
+        <div class="quote-text">
+            <h1>CAREER OPPORTUNITIES</h1>
+        </div>
+    </header>
 
-        <section class="container my-5">
-            <div class="card shadow-sm p-5 text-center">
-                <p class="lead mb-0">
-                    At this time, we do not have any open positions available. Please check back with us soon,
-                    as new opportunities are posted regularly. We encourage you to stay connected and revisit this
-                    page for future career openings with <strong>Fowler Dispatching</strong>.
-                </p>
-            </div>
-        </section>
+    <!-- content -->
+    <section class="container my-5">
+        <div class="card shadow-sm p-5 text-center">
+            <p class="lead mb-0">
+                At this time, we do not have any open positions available. Please check back with us soon,
+                as new opportunities are posted regularly. We encourage you to stay connected and revisit this
+                page for future career openings with <strong>Fowler Dispatching</strong>.
+            </p>
+        </div>
+    </section>
 
-        <!-- footer -->
-        <footer class="text-center text-white" style="background-color: #212529ed">
-            <div class="container">
-                <!-- links -->
-                <section>
-                    <div class="row text-center d-flex justify-content-center pt-5">
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase fw-bold">
-                                <a href="." class="text-white">Home</a>
-                            </h6>
-                        </div>
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase fw-bold">
-                                <a href="about.html" class="text-white">About</a>
-                            </h6>
-                        </div>
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase fw-bold">
-                                <a href="quote.html" class="text-white">Freight Rate</a>
-                            </h6>
-                        </div>
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase fw-bold">
-                                <a href="apply.html" class="text-white">Drive For Us</a>
-                            </h6>
-                        </div>
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase fw-bold">
-                                <a href="contact.html" class="text-white">Contact</a>
-                            </h6>
-                        </div>
+    <!-- footer -->
+    <footer class="text-center text-white" style="background-color: #212529ed">
+        <div class="container">
+            <!-- links -->
+            <section>
+                <div class="row text-center d-flex justify-content-center pt-5">
+                    <div class="col-md-2">
+                        <h6 class="text-uppercase fw-bold">
+                            <a href="." class="text-white">Home</a>
+                        </h6>
                     </div>
-                </section>
-
-                <hr />
-
-                <!-- text area -->
-                <section>
-                    <div class="row d-flex justify-content-center">
-                        <div class="">
-                            <p>
-                                Fowler Dispatching is no longer an active business. This site is a design prototype
-                                created
-                                as part of a university project, and is not intended for actual business use. It is a
-                                demo
-                                site
-                                showcasing design concepts and is not affiliated with any real-world dispatching
-                                service.
-                            </p>
-                        </div>
+                    <div class="col-md-2">
+                        <h6 class="text-uppercase fw-bold">
+                            <a href="about.html" class="text-white">About</a>
+                        </h6>
                     </div>
-                </section>
-                <!-- social icons -->
-                <section class="text-center mb-3">
-                    <a href="https://www.linkedin.com/in/mannyrse/" class="text-white me-4" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-linkedin" viewBox="0 0 16 16">
-                            <path
-                                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
-                        </svg></i>
-                    </a>
-                    <a href="https://github.com/mannyrse" class="text-white" target="_blank">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-github" viewBox="0 0 16 16">
-                            <path
-                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
-                        </svg></i>
-                    </a>
-                </section>
-            </div>
-            <div class="text-center p-3" style="background-color: #212529">
-                © Fowler Dispatching |
-                <a class="text-white" href="mannyrse.com">mannyrse</a>
-            </div>
-        </footer>
+                    <div class="col-md-2">
+                        <h6 class="text-uppercase fw-bold">
+                            <a href="quote.html" class="text-white">Freight Rate</a>
+                        </h6>
+                    </div>
+                    <div class="col-md-2">
+                        <h6 class="text-uppercase fw-bold">
+                            <a href="apply.html" class="text-white">Drive For Us</a>
+                        </h6>
+                    </div>
+                    <div class="col-md-2">
+                        <h6 class="text-uppercase fw-bold">
+                            <a href="contact.html" class="text-white">Contact</a>
+                        </h6>
+                    </div>
+                </div>
+            </section>
+
+            <hr />
+
+            <!-- text area -->
+            <section>
+                <div class="row d-flex justify-content-center">
+                    <div class="">
+                        <p>
+                            Fowler Dispatching is no longer an active business. This site is a design prototype
+                            created
+                            as part of a university project, and is not intended for actual business use. It is a
+                            demo
+                            site
+                            showcasing design concepts and is not affiliated with any real-world dispatching
+                            service.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <!-- social icons -->
+            <section class="text-center mb-3">
+                <a href="https://www.linkedin.com/in/mannyrse/" class="text-white me-4" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-linkedin" viewBox="0 0 16 16">
+                        <path
+                            d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+                    </svg></i>
+                </a>
+                <a href="https://github.com/mannyrse" class="text-white" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-github" viewBox="0 0 16 16">
+                        <path
+                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                    </svg></i>
+                </a>
+            </section>
+        </div>
+        <div class="text-center p-3" style="background-color: #212529">
+            © Fowler Dispatching |
+            <a class="text-white" href="mannyrse.com">mannyrse</a>
+        </div>
+    </footer>
 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
-    </body>
+</body>
 
 </html>
