--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
         <div class="container">
-            <a href=".." class="navbar-brand"><img src="/assets/images/logo.png" alt=""></a>
+            <a href=".." class="navbar-brand"><img src="assets/images/logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#expand"
                 aria-controls="expand" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -116,17 +116,18 @@
     <!-- image carousel -->
     <section class="image-carousel">
         <div class="image-track">
-            <img src="https://plus.unsplash.com/premium_photo-1664695368767-c42483a0bda1?q=80&w=800" alt="">
-            <img src="https://plus.unsplash.com/premium_photo-1661887333453-3b124388d268?w=800" alt="">
-            <img src="https://plus.unsplash.com/premium_photo-1661957173884-901e33146e92?q=80&w=800" alt="">
+            <img src="https://plus.unsplash.com/premium_photo-1664695368767-c42483a0bda1?q=80&w=800" alt="truck image">
+            <img src="https://plus.unsplash.com/premium_photo-1661887333453-3b124388d268?w=800" alt="freight ship">
+            <img src="https://plus.unsplash.com/premium_photo-1661957173884-901e33146e92?q=80&w=800" alt="plane image">
             <img src="https://plus.unsplash.com/premium_photo-1661962316679-cd9b3b70bcaa?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGZyZWlnaHR8ZW58MHx8MHx8fDA%3D"
-                alt="">
+                alt="truck driving down highway image">
             <img src="https://plus.unsplash.com/premium_photo-1664302041974-5d0df4164dd1?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZnJlaWdodHxlbnwwfHwwfHx8MA%3D%3D"
-                alt="">
+                alt="top down view of docked freight ship">
             <img src="https://plus.unsplash.com/premium_photo-1681426730828-bfee2d13861d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTN8fGZyZWlnaHR8ZW58MHx8MHx8fDA%3D"
-                alt="">
+                alt="boxes in warehouse">
         </div>
     </section>
+
     <!-- services section -->
 
     <!-- large screens - 3 columns -->
