--- a/quote.html
+++ b/quote.html
@@ -19,14 +19,14 @@
     <!-- nav bar -->
     <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
         <div class="container">
-            <a href=".." class="navbar-brand"><img src="assets/images/logo.png" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="assets/images/logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#expand"
                 aria-controls="expand" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="expand">
                 <div class="navbar-nav ms-auto">
-                    <a href="." class="nav-item nav-link ms-3">HOME</a>
+                    <a href="index.html" class="nav-item nav-link ms-3">HOME</a>
                     <a href="about.html" class="nav-item nav-link ms-3">ABOUT</a>
                     <a href="quote.html" class="nav-item nav-link ms-3 text-white">FREIGHT RATE</a>
                     <a href="apply.html" class="nav-item nav-link ms-3">DRIVE FOR US</a>
